# OpenGL

./: .gitignore  CMakeLists.txt  README.md
include/: OpenGLContext.hpp  Renderer.hpp
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
src/: Main.cpp  OpenGLContext.cpp  Renderer.cpp
